2025-12-14T00:58:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20200379989 # 1364
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-14
* notice: last 14d: unq all: 43 77
* notice: prev accum: outdated-unq outdated-all / unq all: 3038 5436 / 3072 5482
* notice: next accum: outdated-unq outdated-all / unq all: 3038 5436 / 3086 5513
* notice: prev exec diff / last date diff / accum: unq all: +14 +31 -0 -0 / +15 +32 -0 -0 / 15 32
* notice: removed / changed dates: [] / [2025-12-13]

2025-12-13T12:19:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20191933696 # 1363
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-13
* notice: last 14d: unq all: 30 46
* notice: prev accum: outdated-unq outdated-all / unq all: 3038 5436 / 3071 5481
* notice: next accum: outdated-unq outdated-all / unq all: 3038 5436 / 3072 5482
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-13]

2025-12-12T12:21:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20166616661 # 1361
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-12
* notice: last 14d: unq all: 29 45
* notice: prev accum: outdated-unq outdated-all / unq all: 3038 5436 / 3070 5480
* notice: next accum: outdated-unq outdated-all / unq all: 3038 5436 / 3071 5481
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-12]

2025-12-12T00:53:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20152481573 # 1360