@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-14T00:58:21Z",
+  "timestamp" : "2025-12-14T12:19:10Z",
   "count_outdated" : 5436,
   "uniques_outdated" : 3038,
-  "count" : 5513,
-  "uniques" : 3086,
+  "count" : 5515,
+  "uniques" : 3088,
   "clones" : [
     {
       "timestamp": "2025-11-30T00:00:00Z",
@@ -103,6 +103,15 @@
       "uniques": 15,
       "uniques_minmax": [ 1, 15 ],
       "uniques_decinc": [ 0, 15 ]
+    },
+    {
+      "timestamp": "2025-12-14T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
