@@ -1,6 +1,6 @@
 {
-  "count": 77,
-  "uniques": 43,
+  "count": 79,
+  "uniques": 45,
   "clones": [
     {
       "timestamp": "2025-11-30T00:00:00Z",
@@ -56,6 +56,11 @@
       "timestamp": "2025-12-13T00:00:00Z",
       "count": 32,
       "uniques": 15
+    },
+    {
+      "timestamp": "2025-12-14T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
